tests/NormalTests/paczka1/fuzzy1/91272963.err
Error in line 4: Olyoxq4d A799 97,6
Error in line 16: Hqg A799 62,6
Error in line 29: wlsRmkS9 S80 8,3
Error in line 34: A799 A477 56,1
Error in line 36: A799 S503 95,5
